# templafy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  mkdocs.yml  openapi-python-client-config.yaml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  (+1 more)
templafy/: README.md  __init__.py  pyproject.toml
templafy/api/data_source_fields/: delete_data_sources_data_source_id_fields_field_id.py  get_data_sources_data_source_id_fields_field_id.py  patch_data_sources_data_source_id_fields_field_id.py  post_data_sources_data_source_id_fields.py
templafy/api/data_source_item_fields/: delete_data_sources_data_source_id_items_item_id_fields_field_id.py  put_data_sources_data_source_id_items_item_id_fields_field_id.py
templafy/api/data_source_items/: delete_data_sources_data_source_id_items_item_id.py  get_data_sources_data_source_id_items.py  get_data_sources_data_source_id_items_item_id.py  patch_data_sources_data_source_id_items_item_id.py  post_data_sources_data_source_id_items.py
templafy/api/data_sources/: delete_data_sources_id.py  get_data_sources.py  get_data_sources_id.py  patch_data_sources_id.py  post_data_sources.py
templafy/api/documents/: delete_libraries_space_id_documents_assets_asset_id.py  get_libraries_space_id_documents_assets_asset_id.py  get_libraries_space_id_documents_folders_folder_id_assets.py  patch_libraries_space_id_documents_assets_asset_id.py  post_libraries_space_id_documents_assets_asset_id_generate.py  post_libraries_space_id_documents_folders_folder_id_assets.py
templafy/api/email_elements/: delete_libraries_space_id_email_elements_assets_asset_id.py  get_libraries_space_id_email_elements_assets_asset_id.py  get_libraries_space_id_email_elements_folders_folder_id_assets.py  patch_libraries_space_id_email_elements_assets_asset_id.py  post_libraries_space_id_email_elements_folders_folder_id_assets.py
templafy/api/folders/: delete_libraries_space_id_library_type_folders_folder_id.py  get_libraries_space_id_library_type_folders_folder_id.py  get_libraries_space_id_library_type_folders_folder_id_folders.py  patch_libraries_space_id_library_type_folders_folder_id.py  post_libraries_space_id_library_type_folders_folder_id_folders.py
templafy/api/images/: delete_libraries_space_id_images_assets_asset_id.py  get_libraries_space_id_images_assets_asset_id.py  get_libraries_space_id_images_folders_folder_id_assets.py  patch_libraries_space_id_images_assets_asset_id.py  post_libraries_space_id_images_folders_folder_id_assets.py
templafy/api/libraries/: get_libraries.py  get_libraries_space_id_library_type.py
templafy/api/links/: delete_libraries_space_id_links_assets_asset_id.py  get_libraries_space_id_links_assets_asset_id.py  get_libraries_space_id_links_folders_folder_id_assets.py  patch_libraries_space_id_links_assets_asset_id.py  post_libraries_space_id_links_folders_folder_id_assets.py
templafy/api/pdfs/: delete_libraries_space_id_pdfs_assets_asset_id.py  get_libraries_space_id_pdfs_assets_asset_id.py  get_libraries_space_id_pdfs_folders_folder_id_assets.py  patch_libraries_space_id_pdfs_assets_asset_id.py  post_libraries_space_id_pdfs_folders_folder_id_assets.py
templafy/api/presentations/: delete_libraries_space_id_presentations_assets_asset_id.py  get_libraries_space_id_presentations_assets_asset_id.py  get_libraries_space_id_presentations_folders_folder_id_assets.py  patch_libraries_space_id_presentations_assets_asset_id.py  post_libraries_space_id_presentations_assets_asset_id_generate.py  post_libraries_space_id_presentations_folders_folder_id_assets.py
templafy/api/slide_elements/: delete_libraries_space_id_slide_elements_assets_asset_id.py  get_libraries_space_id_slide_elements_assets_asset_id.py  get_libraries_space_id_slide_elements_folders_folder_id_assets.py  patch_libraries_space_id_slide_elements_assets_asset_id.py  post_libraries_space_id_slide_elements_folders_folder_id_assets.py
templafy/api/slides/: delete_libraries_space_id_slides_assets_asset_id.py  get_libraries_space_id_slides_assets_asset_id.py  get_libraries_space_id_slides_folders_folder_id_assets.py  patch_libraries_space_id_slides_assets_asset_id.py  post_libraries_space_id_slides_folders_folder_id_assets.py
templafy/api/spaces/: get_spaces.py
templafy/api/spreadsheets/: delete_libraries_space_id_spreadsheets_assets_asset_id.py  get_libraries_space_id_spreadsheets_assets_asset_id.py  get_libraries_space_id_spreadsheets_folders_folder_id_assets.py  patch_libraries_space_id_spreadsheets_assets_asset_id.py  post_libraries_space_id_spreadsheets_assets_asset_id_generate.py  post_libraries_space_id_spreadsheets_folders_folder_id_assets.py
templafy/api/text_elements/: delete_libraries_space_id_text_elements_assets_asset_id.py  (+5 more)
templafy/models/: __init__.py  asset_file_state_with_previews.py  asset_state_without_file.py  color_theme_field_schema.py  conflict_problem_details.py  create_color_theme_data_source_item_field_request.py  create_data_source_field_schema_request.py  create_data_source_item_field_request.py  create_data_source_item_request.py  create_data_source_request.py  create_folder_request.py  create_font_data_source_item_field_request.py  create_image_data_source_item_field_request.py  create_image_field_schema_request.py  create_link_request.py  create_number_data_source_item_field_request.py  create_number_field_schema_request.py  create_reference_data_source_item_field_request.py  create_reference_field_schema_request.py  create_text_data_source_item_field_request.py  create_text_field_schema_request.py  data_source.py  data_source_color_theme_item_field.py  data_source_field_schema.py  data_source_font_item_field.py  data_source_image_item_field.py  data_source_item.py  data_source_item_field.py  data_source_language_item_field.py  data_source_number_item_field.py  data_source_object_locked_problem_details.py  data_source_reference_item_field.py  data_source_text_item_field.py  dependency.py  dimensions.py  document.py  document_details.py  email_element.py  email_element_details.py  folder.py  (+72 more)
(+270 files in other folders)
